# OpenCV

CvDemos/: CMakeLists.txt  assignmentTrackBalls.cpp  findContours.cpp  trackBall.cpp
CvDemosV3/: CMakeLists.txt  helloCV.cpp  log.txt  selectTreshold.cpp  traceBall.cpp  trackBall.cpp
LineFollowerV2/: main.cpp
